update css fix mobile view bio overflow width

--- a/src/index.css
+++ b/src/index.css
@@ -147,7 +147,7 @@ a {
   margin-bottom: 24px;
 }
 
-.card,
+.card h3,
 .img-container h3 {
   color: white;
   margin-top: 0;
@@ -189,9 +189,62 @@ a {
   white-space: nowrap;
 }
 
+@media (width >= 1024px) {
+  .card {
+    padding: 20px;
+    transition-duration: 0.3s;
+  }
+  .card:hover {
+    background-color: #282828;
+    border-radius: 5px;
+  }
+}
+
 @media (width < 1024px) {
+  body {
+    padding: 80px 48px;
+  }
+
+  .main {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+  }
+
+  .left {
+    padding: 0;
+    position: relative;
+    align-items: start;
+    height: auto;
+    min-width: auto;
+  }
+
+  .bio-desc {
+    max-width: 440px;
+  }
+
+  .status {
+    margin: 60px 0 20px;
+  }
+
+  .right {
+    padding: 100px 0 0;
+    max-width: none;
+  }
 
   @media (width < 640px) {
+    body {
+      padding: 48px 30px;
+    }
+
+    .bio-heading {
+      font-size: 40px;
+    }
+
+    .bio-desc {
+      max-width: 300px;
+    }
+
     .img-container {
       flex-direction: column-reverse;
       margin: 0;
@@ -207,46 +260,6 @@ a {
       margin-bottom: 20px;
     }
   }
-
-  body {
-    padding: 80px 48px;
-  }
-
-  .main {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-  }
-
-  .left {
-    position: relative;
-    padding: 0;
-    width: 100%;
-    align-items: start;
-    height: auto;
-  }
-
-  .bio-desc {
-    max-width: 440px;
-  }
-
-  .status {
-    margin: 60px 0 20px;
-  }
-
-  .right {
-    padding: 100px 0 0;
-    max-width: none;
-  }
 }
 
-@media (width >= 1024px) {
-  .card {
-    padding: 20px;
-    transition-duration: 0.3s;
-  }
-  .card:hover {
-    background-color: #282828;
-    border-radius: 5px;
-  }
-}
+
